force-app/main/default/objects/demo_setting__c/demo_setting__c.object-meta.xml
<CustomObject>
    <label>demo setting</label>
    <nameField>
        <label>demo setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>demo settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>