force-app/main/default/objects/demo_setting__c/fields/dealer_email__c.field-meta.xml
<CustomField>
    <fullName>dealer_email__c</fullName>
    <label>dealer email</label>
    <type>Email</type>
</CustomField>