force-app/main/default/objects/demo_setting__c/fields/dealer_name__c.field-meta.xml
<CustomField>
    <fullName>dealer_name__c</fullName>
    <label>dealer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>