force-app/main/default/objects/demo_setting__c/fields/demo_key__c.field-meta.xml
<CustomField>
    <fullName>demo_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>demo key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>